reconnect and fixed threads not using virtual threads